# rundaemon

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml
examples/: sample.yml
src/: config.rs  health.rs  logging.rs  main.rs  supervisor.rs
tests/: integration.rs
